# Serena

./: .gitignore  Persona.example.md  Persona.md  README.md  Tooling.md  claude-tmux.sh  cli.py  pyproject.toml
chats/: exporter.py  formatter.py  llm_titles.py  titles.py  watcher.py
core/: codex_scanner.py  config.py  indexer.py  locket_scanner.py  metadata.py  parser.py  scanner.py
desktop/: __init__.py  __main__.py  app.py  app_gtk.py
docs/: knowledge-maintenance-spec.md  personal-assistant-spec.md  windows-setup.md
dream/: hook.sh
knowledge/: reader.py
memory/: locket_mirror.py  store.py
reminders/: .env.example  TASKER_SETUP.md  cli.py  config.py  db.py  main.py  parser.py  requirements.txt  setup.sh
reminders/inputs/: google_tasks.py  ntfy_listener.py
reminders/outputs/: __init__.py  ntfy_alert.py  twilio_call.py
ui/: pty_terminal.py  tui.py  web.py
voice/: config.py  config.yaml  main.py
voice/brain/: claude.py  context.py  memory.py  tools.py
voice/daemon/: briefings.py  budget.py  notifier.py  scheduler.py  triggers.py
voice/desktop/: main.js  package-lock.json  package.json  preload.js
voice/desktop/renderer/: app.js  brain.js  code-panel.js  dashboard.js  index.html  notifications.js  styles.css  transcription.js
voice/docs/: claude-code-integration-spec.md  spec.md
voice/ipc/: server.py
voice/scripts/: clone_voice.py  first_run.py  install_service.sh  setup_google_oauth.py  train_wakeword.py
voice/systemd/: serena.service
voice/tools/: calendar_tool.py  code.py  launcher.py  narrator.py  news.py  registry.py  search.py  system.py  weather.py
voice/voice/: audio.py  loop.py  stt.py  tts.py  vad.py  wakeword.py
