[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "serena"
version = "0.1.0"
description = "Unified UI for Claude Code chats, memories, and knowledge — native GTK on Linux, pywebview on macOS/Windows"
requires-python = ">=3.10"
dependencies = [
    # chats (CLI, web, TUI)
    "click>=8.0",
    "rich>=13.0",
    "textual>=3.0",
    "flask>=3.0",
    "flask-sock>=0.7",
    "ptyprocess>=0.7; sys_platform != 'win32'",
    "pywinpty>=2.0; sys_platform == 'win32'",
    "watchdog>=4.0",
]

[project.optional-dependencies]
desktop = [
    "pywebview[gtk]>=5.0; sys_platform == 'linux'",
    "pywebview>=5.0; sys_platform != 'linux'",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[project.scripts]
chats = "cli:main"

[tool.setuptools]
packages = [
    "core",
    "chats",
    "memory",
    "knowledge",
    "ui",
    "desktop",
]
py-modules = ["cli"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line-length handled by formatter

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "warning"
